--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
+    "mongodb": "^3.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
@@ -37,6 +38,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
+    "@types/mongodb": "^3.3.13",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
@@ -68,7 +70,8 @@
     ],
     "moduleNameMapper": {
       "@app/app": "<rootDir>/libs/app/src",
-      "@app/config": "<rootDir>/libs/config/src"
+      "@app/config": "<rootDir>/libs/config/src",
+      "@app/mongo": "<rootDir>/libs/mongo/src"
     }
   }
 }
