--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
       ],
       "@app/config": [
         "libs/config/src"
+      ],
+      "@app/mongo": [
+        "libs/mongo/src"
       ]
     }
   },
