--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
       ],
       "@app/mongo": [
         "libs/mongo/src"
+      ],
+      "@app/user": [
+        "libs/user/src"
       ]
     }
   },
