--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,15 @@
       ],
       "@app/user": [
         "libs/user/src"
+      ],
+      "@app/auth": [
+        "libs/auth/src"
+      ],
+      "@app/auth/*": [
+        "libs/auth/src/*"
+      ],
+      "@app/ticket-image": [
+        "libs/ticket-image/src"
       ]
     }
   },
