--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
       ],
       "@app/user": [
         "libs/user/src"
+      ],
+      "@app/activity": [
+        "libs/activity/src"
       ]
     }
   },
