--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
       "@app/config": "<rootDir>/libs/config/src",
       "@app/mongo": "<rootDir>/libs/mongo/src",
       "@app/user": "<rootDir>/libs/user/src",
-      "@app/activity": "<rootDir>/libs/activity/src"
+      "@app/activity": "<rootDir>/libs/activity/src",
+      "@app/review": "<rootDir>/libs/review/src"
     }
   }
 }
