--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.0.9",
+    "@types/cheerio": "^0.22.15",
+    "cheerio": "^1.0.0-rc.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
