--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
       "@app/mongo": "<rootDir>/libs/mongo/src",
       "@app/user": "<rootDir>/libs/user/src",
       "@app/activity": "<rootDir>/libs/activity/src",
-      "@app/review": "<rootDir>/libs/review/src"
+      "@app/review": "<rootDir>/libs/review/src",
+      "@app/course": "<rootDir>/libs/course/src"
     }
   }
 }
