--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
       "@app/user": "<rootDir>/libs/user/src",
       "@app/activity": "<rootDir>/libs/activity/src",
       "@app/review": "<rootDir>/libs/review/src",
-      "@app/course": "<rootDir>/libs/course/src"
+      "@app/course": "<rootDir>/libs/course/src",
+      "@app/ownership": "<rootDir>/libs/ownership/src"
     }
   }
 }
