--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       ],
       "@app/course": [
         "libs/course/src"
+      ],
+      "@app/ownership": [
+        "libs/ownership/src"
       ]
     }
   },
